# mampic

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  ROADMAP.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: xyz.powpingdone.Mampic.Devel.json  xyz.powpingdone.Mampic.Release.json
data/: xyz.powpingdone.Mampic.desktop.in.in  xyz.powpingdone.Mampic.gschema.xml.in  xyz.powpingdone.Mampic.metainfo.xml.in.in
data/icons/: README.md  meson.build
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: server-choice-widget.blp  server-choice.blp  setup-server-window.blp  startup-choose.blp  window.blp  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  meson.build  window.rs
src/main_win/: main_window_glib.rs  mod.rs
src/startup/: mod.rs  server_choice_glib.rs  server_props_glib.rs  startup_glib.rs
